--- a/pom.xml
+++ b/pom.xml
@@ -79,10 +79,19 @@
                                     <type>jar</type>
                                 </artifactItem>
                             </artifactItems>
+                            <processTypes>
+                                <web>java $JAVA_OPTS -cp target/classes:target/dependency/* Main</web>
+                            </processTypes>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>com.heroku.sdk</groupId>
+                <artifactId>heroku-maven-plugin</artifactId>
+                <version>2.0.11</version>
+            </plugin>
+            
         </plugins>
     </build>
 </project>
